infra/pi-hole/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: pi-hole
  namespace: pi-hole
  annotations:
    io.cilium/lb-ipam-ips: 192.168.1.154
spec:
  selector:
    app: pi-hole
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: dns-tcp
      port: 53
      protocol: TCP
      targetPort: dns-tcp
    - name: dns-udp
      port: 53
      protocol: UDP
      targetPort: dns-udp
