infra/pi-hole/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pi-hole
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pi-hole.stonegarden.dev`)
      kind: Rule
      services:
        - name: pi-hole
          port: http
      middlewares:
        - name: traefik-forward-auth
